--- a/localisation/braz_por/MD_focus_UKR_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_UKR_l_braz_por.yml
@@ -512,12 +512,12 @@
  UKR_kleptocracy03_desc: "O governo ucraniano está actualmente atolado na sua cleptocracia. Os altos escalões estão corrompidos e usam o seu poder para explorar as pessoas e os recursos naturais do seu território para ampliar a sua riqueza e poderes políticos.\n\n§CPara se livrar do impacto negativo da cleptocracia, o país precisa tomar medidas para combater a corrupção.§!"
  UKR_every_man_ataman_desc: "O espírito dos ucranianos é o espírito de liberdade e independência, às vezes beneficia, às vezes pode fazer uma brincadeira cruel com o país"
  UKR_russian_dependent_military_desc: "A URSS entrou em colapso há muito tempo, mas nosso exército ainda depende do Russo, como herdeiro direto de todas as Forças Armadas da URSS"
- UKR_gas_tt: "We Pay Russia For Energy Resources: $§R0.175§!\n"
- UKR_gas_cheap_tt: "We Pay Russia For Energy Resources: $§R0.100§!\n"
- UKR_gas_cheaper_tt: "We Pay Russia For Energy Resources: $§R0.100§!\n"
- UKR_gassov_tt: "Ukraine Pays For Our Energy Resources: $§G0.175§!\n"
- UKR_gassov_cheap_tt: "Ukraine Pays For Our Energy Resources: $§G0.100§!\n"
- UKR_gassov_cheaper_tt: "Ukraine Pays For Our Energy Resources: $§G0.100§!\n"
+ UKR_gas_tt: "Pagamos à Rússia pelos recursos energéticos: $§R0,175§!\n"
+ UKR_gas_cheap_tt: "Pagamos à Rússia pelos recursos energéticos: $§R0,100§!\n"
+ UKR_gas_cheaper_tt: "Pagamos à Rússia pelos recursos energéticos: $§R0,100§!\n"
+ UKR_gassov_tt: "A Ucrânia paga pelos nossos recursos energéticos: $§G0.175§!\n"
+ UKR_gassov_cheap_tt: "A Ucrânia paga pelos nossos recursos energéticos: $§G0.100§!\n"
+ UKR_gassov_cheaper_tt: "A Ucrânia paga pelos nossos recursos energéticos: $§G0.100§!\n"
  UKR_kolom_money: "Apoio financeiro de Kolomoisky"
  UKR_kolom_money_desc: "O conhecido oligarca Kolomoisky assumiu o financiamento de parte do orçamento militar e policial, o que é certamente uma vantagem para nós, mas talvez haja algo mais por trás disso?"
  UKR_dshv_create: "Forças de Assalto Aéreo"
@@ -533,7 +533,7 @@
  UKR_Kolomoisky_finish: "Regimento Policial Dnipro-1"
  UKR_Kolomoisky_finish_desc: "A última coisa que Kolomoisky se ofereceu para financiar foi a reforma do regimento de Defesa de Dnepropetrovsk em um regimento policial."
  UKR_dissolved_parliament: "Parlamento dissolvido"
- UKR_dissolved_parliament_desc: "The Parliament has been dissolved, and representation is no longer active within the nation.\n§W------------------§!\nThis National Spirit will be §RRemoved§! if we re-instate elections."
+ UKR_dissolved_parliament_desc: "O Parlamento foi dissolvido e a representação já não está ativa no país\n§W------------------§!\nEste Espírito Nacional será §RRemovido§! se restabelecermos as eleições."
  UKR_russia_help_battalions: "Batalhões de Apoio Russos"
  UKR_sso: "Forças de Operações Especiais"
  UKR_dshv: "Forças de Assalto Aéreo"
@@ -547,18 +547,18 @@
  UKR_nationalpolice_tt: "We will be able to §Ghire§! §2national police§! battalions"
  UKR_win_elections_TT: "Our §HBloc§! will §GWin§! the §HElections§!"
  UKR_lose_elections_TT: "Our §HBloc§! will §RLose§! the §HElections§!"
- UKR_presidential_decisions_only_one_is_available_TT: "Only one of these decisions can be taken at the same time."
+ UKR_presidential_decisions_only_one_is_available_TT: "Apenas uma destas decisões pode ser tomada ao mesmo tempo."
  UKR_parliament_block_tt: "This §HLaw§! must be §HApproved§! by the §HVerkhovna Rada§!"
  UKR_free_parliament_TT: "Will re-instate §CFree Elections§! in the §HParliament§!"
  UKR_verkhovna_rada: "Verkhovna Rada"
  UKR_verkhovna_rada_desc: "\n\n\n\n\n\n£UKR_desctext_rada\n\n\n\n\n\n\n\n\nThe §HVerkhovna Rada§! [UKR.GetFlag] is our national parliament, and they dictate what laws come and go, meaning that they can often go against our own needs. The §HVerkhovna Rada§! can be in one of 3 states at any time. §CFree§!, which means we do not have direct control over the §HVerkhovna Rada§!, §CInfluenced§!, which means we have some control, and §CPuppet§!, which means we have total control.\n\nThe §HVerkhovna Rada§! may withdraw its support from our government if we reject §Hcertain proposals§! they have, or if we change to an §Houtlook that isn't closely aligned to theirs§!. They may also randomly withdraw support if they feel like it.\n\nThe more support we have, the better, as it makes it more likely for us to be able to pass laws without having to take additional measures. The §HVerkhovna Rada§! will hold elections and the outcome will be based on the influence of foreign nations, or our own domestic independence.\n\n§G[?UKR_verkhovna_support]§!/§H450§! Seats of the §HVerkhovna Rada§! currently support our government\n"
- ukraine_nationalist_majority_name: "§HPro-Ukraine Majority§!"
+ ukraine_nationalist_majority_name: "§HMaioria pró-Ucrânia§!"
  UKR_right_wing_desc_TT: "A §HPro-Ukrainian Majority§! in the parliament means that the Parliament seeks a greater distancing from both the §CWest§!, and the §GRussians§!. They seek a more independent, and neutral §HUkraine§! in world affairs and generally are against picking sides in any conflict."
- ukraine_eastern_majority_name: "§GPro-Russian Majority§!"
+ ukraine_eastern_majority_name: "§GMaioria pró-Rússia§!"
  UKR_left_wing_desc_TT: "The §GPro-Russian§! bloc in the Parliament generally seek greater ties with the §GRussian§! government, wishing to distance themselves from the §CWestern§! powers. The radicalization varies in within this bloc, as some wish to keep an independent §HUkraine§! with §GPro-Russian§! ties, and others wish greater integration of §HUkrainian§! and §GRussian§! societies."
- ukraine_western_majority_name: "§BPro-Western Majority§!"
+ ukraine_western_majority_name: "§BMaioria Pró-Ocidente§!"
  UKR_liberal_TT: "The §BPro-Western§! bloc within the parliament represent the parties and individuals who want §HUkraine§! to ditches it's Pro-Russian policies, and embrace greater ties with the §CWestern§! powers. The goals of those who align themselves with the §CWest§! varies greatly, with some just wishing economic and cultural ties, and others wishing to join the §BNATO§! alliance and protecting §HUkraine§! from §GRussian§! influence."
- ukraine_dissolved_majority_name: "§RVerkhovna Rada Dissolved§!"
+ ukraine_dissolved_majority_name: "§RVerkhovna Rada dissolvida§!"
  UKR_verkhovna_dissolved_tt: "O parlamento foi encerrado e a sala está vazia, sem representantes presentes."
  ukraine_free_verkhovna: "§CVerkhovna Rada Status: Free§!"
  UKR_verkhovna_free_tt: "O Parlamento está livre da influência do Presidente, com discussões e debates progredindo organicamente sem intervenção de outro órgão governamental."
@@ -580,9 +580,9 @@
  UKR_decrease_military_spend_desc: "If the debate in the Verkhovna Rada is §Gsuccessful§!, the law will be §Ychanged§!"
  UKR_police_open: "Start the §CSecurity§! Spending Debate"
  UKR_police_close: "End the §CSecurity§! Spending Debate"
- UKR_increase_policing: "Request Higher Security Funding"
+ UKR_increase_policing: "Solicite financiamento de segurança superior"
  UKR_increase_policing_desc: "If the debate in the Verkhovna Rada is §Gsuccessful§!, the law will be §Ychanged§!"
- UKR_decrease_policing: "Request Lower Security Funding"
+ UKR_decrease_policing: "Solicitar financiamento de segurança mais baixa"
  UKR_decrease_policing_desc: "If the debate in the Verkhovna Rada is §Gsuccessful§!, the law will be §Ychanged§!"
  UKR_education_open: "Start the §GEducation§! Spending Debate"
  UKR_education_close: "End the §GEducation§! Spending Debate"
