--- a/localisation/russian/MD_countries_cosmetic_l_russian.yml
+++ b/localisation/russian/MD_countries_cosmetic_l_russian.yml
@@ -3324,9 +3324,9 @@
  SHA_autonomy_uar_state: "Государство Западная Сахара"
  SHA_autonomy_uar_province: "Провинция Западная Сахара"
  SHA_autonomy_uar_regional_command: "Региональное командование баасистов Западной Сахары"
- ALG_autonomy_uar_state: "State of Algeria"
- ALG_autonomy_uar_province: "Algerian Province"
- ALG_autonomy_uar_regional_command: "Algerian Ba'athist Regional Command"
+ ALG_autonomy_uar_state: "Государство Алжир"
+ ALG_autonomy_uar_province: "Алжирская провинция"
+ ALG_autonomy_uar_regional_command: "Алжирское баасистское региональное командование"
  TUN_autonomy_uar_state: "State of Tunisia"
  TUN_autonomy_uar_province: "Tunisian Province"
  TUN_autonomy_uar_regional_command: "Tunisian Ba'athist Regional Command"
