--- a/localisation/russian/MD_focus_POL_l_russian.yml
+++ b/localisation/russian/MD_focus_POL_l_russian.yml
@@ -3032,23 +3032,23 @@
  POL_clean_up_chaos_in_administration_desc: "Было очевидно, что наша революция вызовет хаос в администрации. В ППС не понимают, насколько важно как можно скорее разобраться с этой проблемой. Разобраться во всей этой документации будет непросто, а сотрудники перегружены работой, поэтому нам нужно больше офисов."
  POL_invest_in_modern_factory_machinery: "Инвестируйте в современное производственное оборудование"
  POL_invest_in_modern_factory_machinery_desc: "Это стандартное предположение шестилетнего плана. Экономическое развитие. Новые заводы означают новые рабочие места и возможность для многих избавиться от безработицы. От этого выигрывают все."
- POL_fund_laboratories: "Fund Laboratories"
- POL_fund_laboratories_desc: "New buildings are not everything. We need to make the most of what we already have. Funds for research will allow us to grow into an economic power even faster."
- POL_military_industrialization: "Military Industrialization"
- POL_military_industrialization_desc: "We have chosen the peaceful path, but we must always be ready to defend ourselves against the enemy. The world will never be peaceful..."
- POL_nuclear_energy: "Nuclear Energy"
- POL_nuclear_energy_desc: "Nuclear reactors are something that causes a lot of controversy. But nowadays there is no chance that we will repeat the Chernobyl tragedy. We are better prepared."
- POL_communists_vs_social_democrats_category: "Social Democrats VS Communists"
- POL_communists_vs_social_democrats_category_desc: "The civil war between PPS and ZKP-P caused a lot of confusion in the country. There are communists everywhere and the Second Red Revolution is constantly expanding its influence. Without outside help, it may be difficult to control it."
- POL_arrest_communist_supporters: "Arrest Communist Supporters"
- POL_arrest_communist_supporters_desc: "We must suppress communist influence by silencing the ZKP-P allies. There's a chance that many of these people have illegal weapons which we can use."
- POL_obligatory_army_service: "Obligatory Army Service"
- POL_obligatory_army_service_desc: "We must increase military spending at the expense of other branches of the state. We cannot allow the communists to gain the upper hand over us."
- POL_seek_help_in_western_countries: "Seek Help In Western Countries"
- POL_seek_help_in_western_countries_desc: "We can try, but it will be difficult to defeat the communists on our own. We will ask the West for help, someone will surely answer us."
- POL_communist_uprising_in_dolny_slask: "Communist Uprising In Dolny Śląsk"
- POL_communist_uprising_in_warmia_i_mazury: "Communism Uprising In Warmia I Mazury"
- POL_civ_mil_category: "Economy And Military Projects"
+ POL_fund_laboratories: "Фондовые лаборатории"
+ POL_fund_laboratories_desc: "Новостройки – это еще не все. Нам нужно максимально использовать то, что у нас уже есть. Средства на исследования позволят нам еще быстрее стать экономической державой."
+ POL_military_industrialization: "Военная индустриализация"
+ POL_military_industrialization_desc: "Мы выбрали мирный путь, но мы всегда должны быть готовы защитить себя от врага. Мир никогда не будет мирным..."
+ POL_nuclear_energy: "Ядерная энергия"
+ POL_nuclear_energy_desc: "Ядерные реакторы – это то, что вызывает много споров. Но сегодня нет никаких шансов, что мы повторим Чернобыльскую трагедию. Мы лучше подготовлены."
+ POL_communists_vs_social_democrats_category: "Социал-демократы против коммунистов"
+ POL_communists_vs_social_democrats_category_desc: "Гражданская война между ППС и ЗКП-П вызвала немалое смятение в стране. Коммунисты есть повсюду, и Вторая Красная Революция постоянно расширяет свое влияние. Без посторонней помощи контролировать его может быть сложно."
+ POL_arrest_communist_supporters: "Арест сторонников коммунистов"
+ POL_arrest_communist_supporters_desc: "Мы должны подавить коммунистическое влияние, заставив замолчать союзников ЗКП-П. Есть вероятность, что у многих из этих людей есть нелегальное оружие, которое мы можем использовать."
+ POL_obligatory_army_service: "Обязательная армейская служба"
+ POL_obligatory_army_service_desc: "Мы должны увеличить военные расходы за счет других ветвей власти. Мы не можем позволить коммунистам взять над нами верх."
+ POL_seek_help_in_western_countries: "Ищите помощи в западных странах"
+ POL_seek_help_in_western_countries_desc: "Мы можем попытаться, но в одиночку победить коммунистов будет сложно. Мы попросим Запад о помощи, нам обязательно кто-нибудь ответит."
+ POL_communist_uprising_in_dolny_slask: "Коммунистическое восстание в Нижней Силезии"
+ POL_communist_uprising_in_warmia_i_mazury: "Коммунистическое восстание в Вармии и Мазурах"
+ POL_civ_mil_category: "Экономика и военные проекты"
  POL_civ_mil_category_desc: "Democrats failed to fix what the communists screwed up before 1989. That is why we must rebuild Poland's economy."
  POL_improve_coast_line: "Improve Coastline"
  POL_improve_coast_line_desc: "The coastline shouldn't be a high priority for us, but it's worth having some protection."
