--- a/localisation/russian/MD_focus_SUB_l_russian.yml
+++ b/localisation/russian/MD_focus_SUB_l_russian.yml
@@ -330,8 +330,8 @@
  TAT_weaken_the_banks_desc: "Банки - это преторианская гвардия капитализма, несущая его знамя в бой и защищающая его прибыли самим своим существованием. Они вмешиваются в дела бедных регионов мира, издеваются над рабочим классом, демпингуя зарплатами и спекулируя процентами, и влияют на политику, делая как легальные, так и нелегальные пожертвования. Банки должны быть возвращены в состояние, в котором они являются всего лишь аполитичными краткосрочными кредиторами."
  TAT_support_of_the_worker: "Поддержка работников"
  TAT_support_of_the_worker_desc: "Рабочий класс - наша опора и сила, мы всегда будем поддерживать его в борьбе с капиталистической заразой!"
- TAT_power_to_the_workers: "Investing In The Working Class"
- TAT_power_to_the_workers_desc: "We will focus on the working class, which will be the engine of growth of our economy.."
+ TAT_power_to_the_workers: "Инвестиции в рабочий класс"
+ TAT_power_to_the_workers_desc: "Мы сосредоточимся на рабочем классе, который станет двигателем роста нашей экономики."
  TAT_ultimate_tax_reform: "Большая налоговая реформа"
  TAT_ultimate_tax_reform_desc: "Мы намерены провести масштабную налоговую реформу, которая облегчит налоговое бремя для обычных людей, но для бизнеса все будет наоборот"
  TAT_single_party: "Одна партия"
@@ -340,12 +340,12 @@
  TAT_nationalize_foreign_business_desc: "Промышленные предприятия, принадлежащие иностранцам, всегда представляют собой угрозу экономической безопасности. В условиях, когда иностранные государства угрожают нам экономическими санкциями, всегда существует угроза, что владельцы промышленных предприятий уедут ночью, прихватив с собой жизненно важные части своих заводов. Чтобы не допустить этого, мы должны вернуть эти отрасли государству - даже если это обидит иностранные государства."
  TAT_five_year_plan: "Первый пятилетний план"
  TAT_five_year_plan_desc: "Свободные экономические модели западных государств не имеют будущего для социалистического государства. Возврат к плановой экономике, предпочтительно в форме классических советских пятилетних планов, даст правительству бесконтрольное влияние на ранее бесконтрольную экономику."
- TAT_authoritarian_control_over_economy: "Authoritarian Control Over The Economy"
- TAT_authoritarian_control_over_economy_desc: "The economic sphere of our state was left to chance, but now we will bring it back under the control of a strong leader.."
- TAT_create_patrioitc_schools: "Create Patriotic Schools"
- TAT_create_patrioitc_schools_desc: "Patriotic schools will help us increase our influence on the youth, and keep the Communist Party in power."
- TAT_the_peoples_militias: "The Peoples Militias"
- TAT_the_peoples_militias_desc: "Forming well-funded militias for the people can ensure the military has enough support in any conflicts."
+ TAT_authoritarian_control_over_economy: "Авторитарный контроль над экономикой"
+ TAT_authoritarian_control_over_economy_desc: "Экономическая сфера нашего государства была пущена на самотек, но теперь мы вернем ее под контроль сильного лидера."
+ TAT_create_patrioitc_schools: "Создавайте патриотические школы"
+ TAT_create_patrioitc_schools_desc: "Патриотические школы помогут нам усилить влияние на молодежь и сохранить власть Коммунистической партии."
+ TAT_the_peoples_militias: "Народное ополчение"
+ TAT_the_peoples_militias_desc: "Формирование хорошо финансируемых ополчений для населения может обеспечить вооруженным силам достаточную поддержку в любых конфликтах."
  TAT_reestablish_the_military_industrial_complex: "Восстановить военно-промышленный комплекс"
  TAT_reestablish_the_military_industrial_complex_desc: "Армия и народ едины!"
  TAT_red_army: "The Tatar Red Army"
