--- a/localisation/russian/MD_focus_PER_l_russian.yml
+++ b/localisation/russian/MD_focus_PER_l_russian.yml
@@ -5205,33 +5205,33 @@
  PER_political.191212.a: "Чёрт"
  PER_majlis.31.b: "Мне все равно, что они говорят"
  PER_new_majlis: "Меджлес"
- PER_new_majlis_desc: "[PER.GetFlag] §HMajles§! Это парламент нашей страны, и он диктует, какие законы приходят и уходят, а это означает, что они часто могут идти вразрез с нашими собственными потребностями. Люди будут голосовать за представителей в [PER.GetFlag] §HMajles§! каждого избирательного цикла, и места будут распределяться между легализованными партиями в зависимости от их популярности. Места, которые в противном случае достались бы запрещенным партиям, получат §Hнезависимые§! который будет преследовать неизвестную цель.\n\nКаждые несколько месяцев [PER.GetFlag] §HMajles§! проведет §HХдебаты§!, на которых мы сможем пообещать конкретные реформы партиям, имеющим представительство, в обмен на льготы. Если мы даем обещание, но не выполняем его, мы пострадаем от последствий. В любой момент команда [PER.GetFlag] §HMajles§! может возражать против внесенных изменений в закон, возможно, требуя, чтобы мы отменили наши изменения.\n\n[PER_majlis_0][PER_majlis_1][PER_majlis_2][PER_majlis_3][PER_majlis_4][PER_majlis_5][PER_majlis_6][PER_majlis_7][PER_majlis_8][PER_majlis_9][PER_majlis_10][PER_majlis_11][PER_majlis_12][PER_majlis_13][PER_majlis_14][PER_majlis_15][PER_majlis_16][PER_majlis_17][PER_majlis_18][PER_majlis_19][PER_majlis_20][PER_majlis_21][PER_majlis_22][PER_majlis_23][PER_majlis_24][PER_majlis_25][PER_majlis_26][PER_majlis_27][PER_majlis_28][PER_majlis_29][PER_majlis_30][PER_majlis_31][PER_majlis_32][PER_majlis_33][PER_majlis_IND_MP]\n\nОбщее количество мест в парламенте - [?ROOT.PER_majlis_total_seats|Y0]\nСледующие выборы: [?ROOT.PER_election_var|Y0] Месяц\nСледующие дебаты: [?ROOT.PER_session_var|Y0] Месяц"
+ PER_new_majlis_desc: "[PER.GetFlag] §HMajles§! Это парламент нашей страны, и он диктует, какие законы приходят и уходят, а это означает, что они часто могут идти вразрез с нашими собственными потребностями. Люди будут голосовать за представителей в [PER.GetFlag] §HMajles§! каждого избирательного цикла, и места будут распределяться между легализованными партиями в зависимости от их популярности. Места, которые в противном случае достались бы запрещенным партиям, получат §Hнезависимые§! который будет преследовать неизвестную цель.\n\nКаждые несколько месяцев [PER.GetFlag] §HMajles§! проведет §HХдебаты§!, на которых мы сможем пообещать конкретные реформы партиям, имеющим представительство, в обмен на льготы. Если мы даем обещание, но не выполняем его, мы пострадаем от последствий. В любой момент команда [PER.GetFlag] §HMajles§! может возражать против внесенных изменений в закон, возможно, требуя, чтобы мы отменили наши изменения.\n\n[PER_majlis_0][PER_majlis_1][PER_majlis_2][PER_majlis_3][PER_majlis_4][PER_majlis_5][PER_majlis_6][PER_majlis_7][PER_majlis_8][PER_majlis_9][PER_majlis_10][PER_majlis_11][PER_majlis_12][PER_majlis_13][PER_majlis_14][PER_majlis_15][PER_majlis_16][PER_majlis_17][PER_majlis_18][PER_majlis_19][PER_majlis_20][PER_majlis_21][PER_majlis_22][PER_majlis_23][PER_majlis_24][PER_majlis_25][PER_majlis_26][PER_majlis_27][PER_majlis_28][PER_majlis_29][PER_majlis_30][PER_majlis_31][PER_majlis_32][PER_majlis_33][PER_majlis_IND_MP]Общее количество мест в парламенте - [?ROOT.PER_majlis_total_seats|Y0]\nСледующие выборы: [?ROOT.PER_election_var|Y0] Месяц\nСледующие дебаты: [?ROOT.PER_session_var|Y0] Месяц"
  PER_majlis_suffix: "Место(а) занимают"
- PER_majlis_party_0: "[?ROOT.PER_majlis_seats^0|Y0]$PER_majlis_suffix$§Y[PER.Western_Autocracy_L]§!"
- PER_majlis_party_1: "\n\n[?ROOT.PER_majlis_seats^1|Y0]$PER_majlis_suffix$§Y[PER.conservatism_L]§!"
- PER_majlis_party_2: "\n\n[?ROOT.PER_majlis_seats^2|Y0]$PER_majlis_suffix$§Y[PER.liberalism_L]§!"
- PER_majlis_party_3: "\n\n[?ROOT.PER_majlis_seats^3|Y0]$PER_majlis_suffix$§Y[PER.socialism_L]§!"
- PER_majlis_party_4: "\n\n[?ROOT.PER_majlis_seats^4|Y0]$PER_majlis_suffix$§Y[PER.Communist-State_L]§!"
- PER_majlis_party_5: "\n\n[?ROOT.PER_majlis_seats^5|Y0]$PER_majlis_suffix$§Y[PER.anarchist_communism_L]§!"
- PER_majlis_party_6: "\n\n[?ROOT.PER_majlis_seats^6|Y0]$PER_majlis_suffix$§Y[PER.Conservative_L]§!"
- PER_majlis_party_7: "\n\n[?ROOT.PER_majlis_seats^7|Y0]$PER_majlis_suffix$§Y[PER.Autocracy_L]§!"
- PER_majlis_party_8: "[?ROOT.PER_majlis_seats^8|Y0]$PER_majlis_suffix$§Y[PER.Mod_Vilayat_e_Faqih_L]§! (Модераторы)"
- PER_majlis_party_9: "\n\n[?ROOT.PER_majlis_seats^9|Y0]$PER_majlis_suffix$§Y[PER.Vilayat_e_Faqih_L]§! (Сторонники жесткой линии)"
- PER_majlis_party_10: "\n\n[?ROOT.PER_majlis_seats^10|Y0]$PER_majlis_suffix$§Y[PER.Kingdom_L]§!"
- PER_majlis_party_11: "\n\n[?ROOT.PER_majlis_seats^11|Y0]$PER_majlis_suffix$§Y[PER.Caliphate_L]§!"
- PER_majlis_party_12: "\n\n[?ROOT.PER_majlis_seats^12|Y0]$PER_majlis_suffix$§Y[PER.Neutral_Muslim_Brotherhood_L]§!"
- PER_majlis_party_13: "\n\n[?ROOT.PER_majlis_seats^13|Y0]$PER_majlis_suffix$§Y[PER.Neutral_Autocracy_L]§!"
- PER_majlis_party_14: "\n\n[?ROOT.PER_majlis_seats^14|Y0]$PER_majlis_suffix$§Y[PER.Neutral_conservatism_L]§!"
- PER_majlis_party_15: "\n\n[?ROOT.PER_majlis_seats^15|Y0]$PER_majlis_suffix$§Y[PER.oligarchism_L]§!"
- PER_majlis_party_16: "\n\n[?ROOT.PER_majlis_seats^16|Y0]$PER_majlis_suffix$§Y[PER.Neutral_Libertarian_L]§!"
- PER_majlis_party_17: "\n\n[?ROOT.PER_majlis_seats^17|Y0]$PER_majlis_suffix$§Y[PER.Neutral_green_L]§!"
- PER_majlis_party_18: "\n\n[?ROOT.PER_majlis_seats^18|Y0]$PER_majlis_suffix$§Y[PER.neutral_Social_L]§!"
- PER_majlis_party_19: "\n\n[?ROOT.PER_majlis_seats^19|Y0]$PER_majlis_suffix$§Y[PER.Neutral_Communism_L]§!"
- PER_majlis_party_20: "\n\n[?ROOT.PER_majlis_seats^20|Y0]$PER_majlis_suffix$§Y[PER.Nat_Populism_L]§!"
- PER_majlis_party_21: "\n\n[?ROOT.PER_majlis_seats^21|Y0]$PER_majlis_suffix$§Y[PER.Nat_Fascism_L]§!"
- PER_majlis_party_22: "\n\n[?ROOT.PER_majlis_seats^22|Y0]$PER_majlis_suffix$ Представители §Y[PER.Nat_Autocracy_L]§!"
- PER_majlis_party_23: "\n\n[?ROOT.PER_majlis_seats^23|Y0]$PER_majlis_suffix$ Представители £PER_monarchism  §YПавлиний трон§!"
- PER_majlis_party_IND: "\n\n[?ROOT.PER_majlis_seats_INDEPENDENT|Y0]$PER_majlis_suffix$§YНезависимые§!"
+ PER_majlis_party_0: "[?ROOT.PER_majlis_seats^0|Y0]$PER_majlis_suffix$§Y[PER.Western_Autocracy_L]§!\n\n"
+ PER_majlis_party_1: "[?ROOT.PER_majlis_seats^1|Y0]$PER_majlis_suffix$§Y[PER.conservatism_L]§!\n\n"
+ PER_majlis_party_2: "[?ROOT.PER_majlis_seats^2|Y0]$PER_majlis_suffix$§Y[PER.liberalism_L]§!\n\n"
+ PER_majlis_party_3: "[?ROOT.PER_majlis_seats^3|Y0]$PER_majlis_suffix$§Y[PER.socialism_L]§!\n\n"
+ PER_majlis_party_4: "[?ROOT.PER_majlis_seats^4|Y0]$PER_majlis_suffix$§Y[PER.Communist-State_L]§!\n\n"
+ PER_majlis_party_5: "[?ROOT.PER_majlis_seats^5|Y0]$PER_majlis_suffix$§Y[PER.anarchist_communism_L]§!\n\n"
+ PER_majlis_party_6: "[?ROOT.PER_majlis_seats^6|Y0]$PER_majlis_suffix$§Y[PER.Conservative_L]§!\n\n"
+ PER_majlis_party_7: "[?ROOT.PER_majlis_seats^7|Y0]$PER_majlis_suffix$§Y[PER.Autocracy_L]§!\n\n"
+ PER_majlis_party_8: "[?ROOT.PER_majlis_seats^8|Y0]$PER_majlis_suffix$§Y[PER.Mod_Vilayat_e_Faqih_L]§! (Модераторы)\n\n"
+ PER_majlis_party_9: "[?ROOT.PER_majlis_seats^9|Y0]$PER_majlis_suffix$§Y[PER.Vilayat_e_Faqih_L]§! (Сторонники жесткой линии)\n\n"
+ PER_majlis_party_10: "[?ROOT.PER_majlis_seats^10|Y0]$PER_majlis_suffix$§Y[PER.Kingdom_L]§!\n\n"
+ PER_majlis_party_11: "[?ROOT.PER_majlis_seats^11|Y0]$PER_majlis_suffix$§Y[PER.Caliphate_L]§!\n\n"
+ PER_majlis_party_12: "[?ROOT.PER_majlis_seats^12|Y0]$PER_majlis_suffix$§Y[PER.Neutral_Muslim_Brotherhood_L]§!\n\n"
+ PER_majlis_party_13: "[?ROOT.PER_majlis_seats^13|Y0]$PER_majlis_suffix$§Y[PER.Neutral_Autocracy_L]§!\n\n"
+ PER_majlis_party_14: "[?ROOT.PER_majlis_seats^14|Y0]$PER_majlis_suffix$§Y[PER.Neutral_conservatism_L]§!\n\n"
+ PER_majlis_party_15: "[?ROOT.PER_majlis_seats^15|Y0]$PER_majlis_suffix$§Y[PER.oligarchism_L]§!\n\n"
+ PER_majlis_party_16: "[?ROOT.PER_majlis_seats^16|Y0]$PER_majlis_suffix$§Y[PER.Neutral_Libertarian_L]§!\n\n"
+ PER_majlis_party_17: "[?ROOT.PER_majlis_seats^17|Y0]$PER_majlis_suffix$§Y[PER.Neutral_green_L]§!\n\n"
+ PER_majlis_party_18: "[?ROOT.PER_majlis_seats^18|Y0]$PER_majlis_suffix$§Y[PER.neutral_Social_L]§!\n\n"
+ PER_majlis_party_19: "[?ROOT.PER_majlis_seats^19|Y0]$PER_majlis_suffix$§Y[PER.Neutral_Communism_L]§!\n\n"
+ PER_majlis_party_20: "[?ROOT.PER_majlis_seats^20|Y0]$PER_majlis_suffix$§Y[PER.Nat_Populism_L]§!\n\n"
+ PER_majlis_party_21: "[?ROOT.PER_majlis_seats^21|Y0]$PER_majlis_suffix$§Y[PER.Nat_Fascism_L]§!\n\n"
+ PER_majlis_party_22: "[?ROOT.PER_majlis_seats^22|Y0]$PER_majlis_suffix$ Представители §Y[PER.Nat_Autocracy_L]§!\n\n"
+ PER_majlis_party_23: "[?ROOT.PER_majlis_seats^23|Y0]$PER_majlis_suffix$ Представители £PER_monarchism  §YПавлиний трон§!\n\n"
+ PER_majlis_party_IND: "[?ROOT.PER_majlis_seats_INDEPENDENT|Y0]$PER_majlis_suffix$§YНезависимые§!\n\n"
  PER_move_to_baharestan: "Переместить меджлис в Бахарестан"
  PER_move_to_baharestan_desc: "Наше правительство в последнее время весьма непостоянно относилось к местонахождению здания Меджлиса, и пришло время остановиться на чем-то лучшем и придерживаться этого, чтобы повысить эффективность собрания."
  PER_dissolve_the_parliament: "Распустить Мэйлс"
