--- a/localisation/simp_chinese/MD_ideas_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_ideas_l_simp_chinese.yml
@@ -60,7 +60,7 @@
  orthodox_christian_desc: "§Y特殊规则：§!§W可以禁止温和伊斯兰政党。§!\n\n东正教又称正教，官方称东正教，是世界上第二大基督教教会和现存最古老的宗教机构之一。在东正教的教谕中，它是耶稣基督在他给使徒们的伟大使命中建立的唯一的、神圣的、属于天主教和使徒的教会。东正教信奉他们所理解的原始基督教信仰，并保持从使徒们传下来的神圣传统。"
  zoroastrian: "琐罗亚斯德教"
  zoroastrian_desc: "琐罗亚斯德教是世界上最古老的一神论宗教，它的教义是基于伊朗先知琐罗亚斯特的启示，它宣扬世界上存在着善恶的二元对立。琐罗亚斯德教的三个核心原则是善念、善行和善言。"
- pluralist: "多元论"
+ pluralist: "多元化"
  pluralist_desc: "多元主义这一世界观认为，任何一种宗教都不会是真理的唯一且排他的来源，所以要承认至少会有一些真理和真正价值存在于其他宗教之中。"
  EU_member: "欧盟成员国"
  EU_member_desc: "欧洲联盟（EU）是由主要位于欧洲的成员国组成的政治和经济联盟。欧盟通过一套适用于所有成员国的标准化法律体系，建立了一个内部单一市场。欧盟政策旨在确保人员、商品、服务和资本在内部市场内的自由流动，制定司法和内政方面的法律，并保持在贸易、农业、渔业和区域发展方面的共同政策。"
