--- a/localisation/braz_por/MD_focus_PER_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_PER_l_braz_por.yml
@@ -2825,7 +2825,7 @@
  PER_disband_revolutionary_council_desc: "'§HMara dad farmud va Khod Davar Ast§!'\n\nOs Xás do Irã têm usado o título \"Shahanshah\" por mais de 2500 anos. Este título não pode ser abandonado e deve ser reivindicado pelo herdeiro legítimo do trono de pavão!"
  PER_our_majlis: "Nossos Representantes"
  PER_our_majlis_desc: "Os Majles são essencialmente os nossos fantoches, e aprovar leis será bastante simples, apesar da enorme reação entre alguns dos nossos povos."
- PER_benevolancy: "Uma República"
+ PER_benevolancy: "Uma democracia"
  PER_benevolancy_desc: "O povo iraniano quer uma coisa e apenas uma coisa, democracia. Depois de lutar para alcançar a democracia duas vezes agora, seria trair o povo iraniano não conceder esse simples desejo pelo qual milhares morreram.."
  PER_constitutional_reforms: "Reformas Constitucionais"
  PER_constitutional_reforms_desc: "A Constituição iraniana necessita urgentemente de revisões. Esta Constituição recém-escrita aderirá aos princípios seculares e democráticos, ao mesmo tempo que colocará o desejo do povo iraniano na vanguarda de tudo."
