--- a/localisation/polish/MD_focus_PER_l_polish.yml
+++ b/localisation/polish/MD_focus_PER_l_polish.yml
@@ -2827,7 +2827,7 @@
  PER_disband_revolutionary_council_desc: "„§HMara tata farmud va Khod Davar Ast§!”\n\nSzachowie Iranu noszą tytuł „Shahanshah” od ponad 2500 lat. Tego tytułu nie można porzucić i musi się o niego ubiegać prawowity następca pawiego tronu!"
  PER_our_majlis: "Nasi przedstawiciele"
  PER_our_majlis_desc: "Majles to w zasadzie nasze marionetki i uchwalanie prawa będzie dość proste pomimo ogromnej reakcji niektórych naszych obywateli."
- PER_benevolancy: "Republika"
+ PER_benevolancy: "Demokracja"
  PER_benevolancy_desc: "Naród irański chce jednego i tylko jednego: demokracji. Po dwukrotnej walce o demokrację zdradą narodu irańskiego byłoby niespełnienie tego prostego życzenia, za które umarły tysiące ludzi."
  PER_constitutional_reforms: "Reformy konstytucyjne"
  PER_constitutional_reforms_desc: "Irańska konstytucja pilnie potrzebuje zmian. Ta nowo napisana konstytucja będzie zgodna z zasadami świeckimi i demokratycznymi, a jednocześnie na pierwszym planie będzie stawiać wolę narodu irańskiego."
