--- a/localisation/russian/MD_focus_PER_l_russian.yml
+++ b/localisation/russian/MD_focus_PER_l_russian.yml
@@ -2723,7 +2723,7 @@
  PER_disband_revolutionary_council_desc: "Шахи Ирана носят титул \"шаханшах\" уже более 2500 лет. От этого титула нельзя отказаться, его должен взять на себя законный наследник павлиньего трона!"
  PER_our_majlis: "Наши представители"
  PER_our_majlis_desc: "Меджлис, по сути, являются нашими марионетками, и принять законы будет довольно просто, несмотря на огромную негативную реакцию среди некоторых наших людей."
- PER_benevolancy: "Республика"
+ PER_benevolancy: "Демократия"
  PER_benevolancy_desc: "Иранский народ хочет одного и только одного - демократии. После двухкратной борьбы за демократию было бы предательством по отношению к иранскому народу не исполнить это простое желание, за которое погибли тысячи людей."
  PER_constitutional_reforms: "Конституционные реформы"
  PER_constitutional_reforms_desc: "Конституция Ирана остро нуждается в пересмотре. Эта недавно написанная конституция будет соответствовать светским и демократическим принципам, а также поставит во главу угла желания иранского народа."
