--- a/localisation/french/MD_focus_PER_l_french.yml
+++ b/localisation/french/MD_focus_PER_l_french.yml
@@ -2723,7 +2723,7 @@
  PER_disband_revolutionary_council_desc: "'§HMara dad farmud va Khod Davar Ast§!'\n\nThe Shahs of Iran have gone by the title \"Shahanshah\" for over 2500 years. This title cannot be abandoned, and must be claimed by the legitimate heir to the peacock throne!"
  PER_our_majlis: "Our Representatives"
  PER_our_majlis_desc: "The Majles are essentially our puppets, and passing laws will be fairly simple, despite the huge backlash amongst some of our people."
- PER_benevolancy: "A Republic"
+ PER_benevolancy: "Une démocratie"
  PER_benevolancy_desc: "The Iranian people want one thing, and one thing only, democracy. After fighting to achieve democracy two times now, it would be betraying the Iranian people by not granting them this simple wish that thousands have died for.."
  PER_constitutional_reforms: "Constitutional Reforms"
  PER_constitutional_reforms_desc: "The Iranian Constitution is in dire need of revisions. This newly written constitution will adhere to Secular and Democratic principles, whilst also putting the Iranian people's wish at the forefront of it all."
