MLW-SAF FoPol Begun
also added some stuff for gcc states

--- a/localisation/english/MD_focus_MLW_l_english.yml
+++ b/localisation/english/MD_focus_MLW_l_english.yml
@@ -12,6 +12,15 @@
  MLW_two_chinas_DM_desc: ""
 
 
+ # DECISIONS
+ # GCC FOPOL
+ MLW_FOPOL_GCC_decisions_category: "Malawian-Gulf Relations"
+ MLW_FOPOL_GCC_decisions_category_desc: ""
+
+
+
+
+
  # FOCUSES
  # FOREIGN POLICY
  MLW_our_place: "Our Place in the World"
@@ -387,6 +396,7 @@
  MLW_GCC_foreign_influence_defence_tt: "Modifies §Y$MLW_GCC_DM$§!: §Y$foreign_influence_defense_modifier$§! by [?DM_foreign_influence_DEF_change|%+2] (Current: [?MLW_gcc_foreign_influence_defence|%Y2])"
  MLW_GCC_fascism_acceptance_tt: "Modifies §Y$MLW_GCC_DM$§!: §Y$fascism_acceptance$§! by [?DM_fascism_acceptance_change|%+2] (Current: [?MLW_gcc_salafism|%Y2])"
  MLW_GCC_neutrality_acceptance_tt: "Modifies §Y$MLW_GCC_DM$§!: §Y$neutrality_acceptance$§! by [?DM_neutrality_acceptance_change|%+2] (Current: [?MLW_gcc_neutrality|%Y2])"
+ MLW_GCC_join_auction_TT: "§Y[?var:GCC_nation.GetNameWithFlag]§! will join the auction participants for §Y[MLW.GetAdjective]§! resource rights."
 
  # TWO CHINAS EFFECT TOOLTIPS
  MLW_2C_rail_construction_speed_tt: "Modifies §Y$MLW_two_chinas_DM$§!: §Y$MODIFIER_production_speed_rail_way_factor$§! by [?DM_rail_construction_speed_change|%+2] (Current: [?MLW_2C_rail_speed|%Y2])"
