Internal Faction Improvements

--- a/localisation/english/0_energy_l_english.yml
+++ b/localisation/english/0_energy_l_english.yml
@@ -9,6 +9,10 @@
  energy_buy_reactor_grade_material_desc: "We are running short on Reactor-Grade material. It could be worth while to purchase some reactor-grade material for our nuclear reactors."
  energy_building_enrichment_facilities: "§YConstructing§! Enrichment Facilities"
  energy_building_enrichment_facilities_desc: "We have chosen the path of going nuclear. It is time to start building the materials required for our nation."
+ auto_accept_all_reactor_grade_purchases: "§YAuto-Accept§! Reactor-Grade Material Purchases"
+ auto_accept_all_reactor_grade_purchases_desc: "Auto-Accept all reactor-grade material purchases from foreign countries."
+ stop_auto_accept_all_reactor_grade_purchases: "Stop §YAuto-Accepting§! Reactor-Grade Material Purchases"
+ stop_auto_accept_all_reactor_grade_purchases_desc: "Stop auto-accepting reactor-grade material purchases from foreign countries."
 
  canceled_our_enrichment_facility_construction: "Ceased our Enrichment Facility Construction"
  limited_to_heu_materials_only: "Limited Us to LEU Materials"
