--- a/localisation/english/MD_map_modes_l_english.yml
+++ b/localisation/english/MD_map_modes_l_english.yml
@@ -24,6 +24,11 @@
  MAPMODE_PRODUCTIVITY_MAP_MODE_DESCRIPTION: "This map mode displays the current productivity of individual states."
  productivity_map_mode_tooltip: "Productivity in the state, [FROM.GetName]"
  productivity_map_mode_tooltip_delayed: "Productivity in the state, [FROM.GetName] is: [?FROM.productivity_state_var|Y]\n"
+ MAPMODE_UNEMPLOYMENT_RATE_MAP_MODE_NAME: "Unemployment Rate"
+ MAPMODE_UNEMPLOYMENT_RATE_MODE: "Unemployment Rate"
+ MAPMODE_UNEMPLOYMENT_RATE_MODE_DESCRIPTION: "This map mode displays the current Unemployment Rate of countries."
+ unemployment_rate_map_mode_tooltip: "Unemployment rate in [FROM.CONTROLLER.GetNameWithFlag]"
+ unemployment_rate_map_mode_tooltip_delayed: "Unemployment Rate in [FROM.CONTROLLER.GetNameWithFlag] is: [?FROM.CONTROLLER:total_unemployed_percentage_display|%Y]"
 
  MAPMODE_RENEWABLE_ENERGY_HOTSPOT_MAP_MODE_NAME: "Renewable Hotspots"
  MAPMODE_RENEWABLE_ENERGY_HOTSPOT_MAP_MODE: "Renewable Hotspots"
