--- a/Changelog.txt
+++ b/Changelog.txt
@@ -12,6 +12,9 @@ v1.10.5
 
  Bugfix:
   - Fixed the missing model errors from TOTA (added blank asset files)
+  - Fixed Larry Holmes being Larry Golmes by mistake
+  - Fixed the "Businesses in the East" not giving opinion when funding startup
+  - Fixed Hezbollah not giving APCs in your weekly income
 
  Content:
   - Added additional decisions to a variety of different internal factions
