MLW SAF Foreign Policy Branch
migrated more content over, will need to do more tweaks to SAF events for a few possibilities

--- a/localisation/english/MD_focus_MLW_l_english.yml
+++ b/localisation/english/MD_focus_MLW_l_english.yml
@@ -8,8 +8,92 @@
  # DYNAMIC MODIFIERS
  MLW_GCC_DM: "Malawian-Gulf Relations"
  MLW_GCC_DM_desc: "Whilst the Gulf states are far from our borders, we have plenty of ties economically and culturally between us, the Gulf states are a wealthy region with plenty of oil that are vitally necessary for our burgeoning economy and a good place for potential employment options for many Malawians to send their wages home."
+
  MLW_two_chinas_DM: "The Two Chinas"
  MLW_two_chinas_DM_desc: ""
+
+ MLW_SAF_DM: "Malawian-South African Relations"
+ MLW_SAF_DM_desc: "Whilst not neighbouring one another, Malawi and South Africa have had a complicated and, at times, strained relationship. As a new millennium arises, the slate is fresh to carve out a new relationship with one another as African brothers, or rivals."
+ MLW_SAF_DM_mega_loc_TT: "[MLW_SAF_DM_incomes][MLW_SAF_DM_expenses]"
+ MLW_SAF_DM_incomes_TT: "Additional Income: $[?MLW_SAF_additional_income|+3]\n"
+ MLW_SAF_DM_expenses_TT: "Additional Expenses: $[?MLW_SAF_additional_expense|-3]\n"
+
+ # EVENTS
+ # SOUTH AFRICAN FOPOL
+ MLW_FOPOL_SAF.1.t1: "Malawian Armed Forces Seek Security Co-operation"
+ MLW_FOPOL_SAF.1.d1: ""
+
+
+ MLW_FOPOL_SAF.1.t2: "uMkhonto weSizwe Offers Training Co-operation Pact"
+ MLW_FOPOL_SAF.1.d2: ""
+
+
+ MLW_FOPOL_SAF.1.t3: "South African PMCs Offer Security Co-operation Plan"
+ MLW_FOPOL_SAF.1.d3: ""
+
+
+ MLW_FOPOL_SAF.1.t4: "Malawian Armed Forces Seek Security Co-operation"
+ MLW_FOPOL_SAF.1.d4: ""
+
+
+ MLW_FOPOL_SAF.1.t5: "Malawian Armed Forces Offer to Stand with South Africa"
+ MLW_FOPOL_SAF.1.d5: ""
+
+ MLW_FOPOL_SAF.1.O1: "A future ally with a past foe."
+ MLW_FOPOL_SAF.1.O2: "The MK will have our shield, we will have their spear."
+ MLW_FOPOL_SAF.1.O3: "Until the damn commies are gone, forget it."
+ MLW_FOPOL_SAF.1.O4: "An imperfect situation, but one we can work with."
+ MLW_FOPOL_SAF.1.O5: "\"Apartheid\" is simply Chichewa for \"opportunity\"."
+
+ MLW_FOPOL_SAF.1.Y1: "Co-operation can only help us all."
+ MLW_FOPOL_SAF.1.N1: "You and what army?"
+ MLW_FOPOL_SAF.1.O6: "They're doing what?!"
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ MLW_FOPOL_SAF.5.t: "Malawi Offers State Apology for Kamuzu Banda"
+ MLW_FOPOL_SAF.5.d: "Today the Malawian government issued a communiqué that emphasised the \"importance of reconciliation and co-operation within the continent\". The official state sanctioned release also admitted for the first time the misdeeds and crimes of the former dictator and first president of Malawi; Hastings Kamuzu Banda.\n\nBanda was most well known for maintaining his iron grip over the people of Malawi and his fearsome Young Pioneer paramilitary force, unfortunately, he also aided other leaders within the continent to maintain their own form of iron grip over their respective nations, South Africa among them. During the years of Apartheid, Banda's Malawi along with several other nations, allowed South Africa to skirt sanctions at great detriment to South Africa's black populace."
+ MLW_FOPOL_SAF.5.O1: "A new millennium for a new relationship."
+
+ MLW_FOPOL_SAF.6.t: "Malawians Seek Out Low Skilled Labour in South Africa"
+ MLW_FOPOL_SAF.6.d: "With many jobs left without workers to fill them due to the comparatively low wages on offer, it may be a surprise for many to hear that those jobs are scheduled to be filled in relatively short stead. But for the Malawian men and women getting off of planes, trains and buses, those low wages here in South Africa may as well be a dream come true for those who come from the \"Warm Heart of Africa\" who hope to send most of the Rand that they earn back north.\n\nSome people are however concerned about the nature of this arrangement and even suspect that the low wage jobs won't be the last to be given to the Malawian hopefuls."
+ MLW_FOPOL_SAF.6.O1: "No one wants to work anymore..."
+ MLW_FOPOL_SAF.6.O2: "We must protect our workers!"
+
+ MLW_FOPOL_SAF.60.t: "South Africa Institutes Work Permit Scheme"
+ MLW_FOPOL_SAF.60.d: "Whilst our people were eager to fill vacancies that no one in the rainbow nation wanted to take up, it appears as though their government are less enthused at the concept and have hastily written up a law that almost flew through the parliament. If our hardy workers wish to work in South Africa, they have to fulfil certain quotas, quotas we almost certainly do not fit into neatly.\n\nWe have but 2 options, either we enforce the permit scheme up here in Malawi in order to appease the South Africans, or we can reach out to certain contacts that may allow our more morally bankrupt or desperate people to work these jobs in exchange for special favours to, or even within, these organisations..."
+ MLW_FOPOL_SAF.60.O1: "Our people will suffer without adequate opportunities!"
+
+ MLW_FOPOL_SAF.7.t: "Malawians Flooding [THIS.GetAdjective] Job Market!"
+ MLW_FOPOL_SAF.7.d: "In a recent exposé, undercover journalists infiltrated an illegal workshop in downtown Johannesburg, what was found was hordes of undocumented Malawian workers all collaborating in order to keep wages low enough to make sure South Africans would not work them but high enough that they could send the money back to their families in Malawi.\n\nThat's if you believe the story they tell however, as many, if not the majority of those found in the Johannesburg workshop were found to have ties to nefarious actors spread out all across our great nation, if the suspected ties to the Malawian government are true, they may just have a lot to answer for."
+ MLW_FOPOL_SAF.7.O1: "They're bringing drugs, they're bring crime..."
+
+
+
+
+
+
+ # GCC FOPOL
+ MLW_FOPOL_GCC.1.t: "Malawi Announces a Construction Conglomerate"
+ MLW_FOPOL_GCC.1.d: "Today the Malawian government announced plans to form and subsidise a large conglomerate of construction companies under the awning of their newly formed \"Malawi State Construction Company\", better known as the \"MSCC\".\nThe government hopes to provide teams ready to work across the SADC and Gulf States in the foreseeable future."
+ MLW_FOPOL_GCC.1.O1: "We will build the new Millennium!"
+ MLW_FOPOL_GCC.1.O2: "Hopefully we can hire them soon."
+ MLW_FOPOL_GCC.1.O3: "We'll hire a team or two soon!"
 
 
  # DECISIONS
@@ -359,12 +443,7 @@
 
 
 
- # EVENTS
- MLW_FOPOL_GCC.1.t: "Malawi Announces a Construction Conglomerate"
- MLW_FOPOL_GCC.1.d: "Today the Malawian government announced plans to form and subsidise a large conglomerate of construction companies under the awning of their newly formed \"Malawi State Construction Company\", better known as the \"MSCC\".\nThe government hopes to provide teams ready to work across the SADC and Gulf States in the foreseeable future."
- MLW_FOPOL_GCC.1.O1: "We will build the new Millennium!"
- MLW_FOPOL_GCC.1.O2: "Hopefully we can hire them soon."
- MLW_FOPOL_GCC.1.O3: "We'll hire a team or two soon!"
+
 
 
 
@@ -397,6 +476,18 @@
  MLW_GCC_fascism_acceptance_tt: "Modifies §Y$MLW_GCC_DM$§!: §Y$fascism_acceptance$§! by [?DM_fascism_acceptance_change|%+2] (Current: [?MLW_gcc_salafism|%Y2])"
  MLW_GCC_neutrality_acceptance_tt: "Modifies §Y$MLW_GCC_DM$§!: §Y$neutrality_acceptance$§! by [?DM_neutrality_acceptance_change|%+2] (Current: [?MLW_gcc_neutrality|%Y2])"
  MLW_GCC_join_auction_TT: "§Y[?var:GCC_nation.GetNameWithFlag]§! will join the auction participants for §Y[MLW.GetAdjective]§! resource rights."
+
+ # SOUTH AFRICA EFFECT TOOLTIPS
+ MLW_SAF_training_time_TT: "Modifies §Y$MLW_SAF_DM$§!: §Y$MODIFIER_TRAINING_TIME_FACTOR$§! by [?DM_training_time_change|%-2] (Current: [?MLW_SAF_training_time|%Y2])"
+ MLW_SAF_max_training_TT: "Modifies §Y$MLW_SAF_DM$§!: §Y$MODIFIER_MAX_TRAINING_XP_FACTOR$§! by [?DM_max_training_change|%-2] (Current: [?MLW_SAF_max_training|%Y2])"
+ MLW_SAF_army_xp_factor_TT: "Modifies §Y$MLW_SAF_DM$§!: §Y$MODIFIER_XP_GAIN_ARMY_FACTOR$§! by [?DM_xp_factor_change|%-2] (Current: [?MLW_SAF_army_xp_gain|%Y2])"
+ MLW_SAF_navy_xp_factor_TT: "Modifies §Y$MLW_SAF_DM$§!: §Y$MODIFIER_XP_GAIN_NAVY_FACTOR$§! by [?DM_xp_factor_change|%-2] (Current: [?MLW_SAF_navy_xp_gain|%Y2])"
+ MLW_SAF_air_xp_factor_TT: "Modifies §Y$MLW_SAF_DM$§!: §Y$MODIFIER_XP_GAIN_AIR_FACTOR$§! by [?DM_xp_factor_change|%-2] (Current: [?MLW_SAF_air_xp_gain|%Y2])"
+ MLW_SAF_police_cost_TT: "Modifies §Y$MLW_SAF_DM$§!: §Y$police_cost_multiplier_modifier$§! by [?DM_police_cost_change|%-2] (Current: [?MLW_SAF_police_cost|%Y2])"
+ MLW_SAF_border_control_cost_TT: "Modifies §Y$MLW_SAF_DM$§!: §Y$border_control_multiplier_modifier$§! by [?DM_border_control_cost_change|%-2] (Current: [?MLW_SAF_border_control_cost|%Y2])"
+ MLW_SAF_migration_rate_TT: "Modifies §Y$MLW_SAF_DM$§!: §Y$migration_rate_value_factor$§! by [?DM_migration_rate_change|%-2] (Current: [?MLW_SAF_migration_rate|%Y2])"
+ MLW_SAF_additional_income_TT: "Modifies §Y$MLW_SAF_DM$§! by [?DM_additional_income_change|+3] weekly (Current: [?MLW_SAF_additional_income|+3])"
+ MLW_SAF_additional_expense_TT: "Modifies §Y$MLW_SAF_DM$§! by [?DM_additional_expense_change|-3] weekly (Current: [?MLW_SAF_additional_expense|-3])"
 
  # TWO CHINAS EFFECT TOOLTIPS
  MLW_2C_rail_construction_speed_tt: "Modifies §Y$MLW_two_chinas_DM$§!: §Y$MODIFIER_production_speed_rail_way_factor$§! by [?DM_rail_construction_speed_change|%+2] (Current: [?MLW_2C_rail_speed|%Y2])"
