--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -6266,7 +6266,7 @@
  ISR.Neutral_Libertarian: "£ISR_Neutral_Libertarian Zehut"
  ISR.Neutral_Libertarian_desc: ""
  ISR.Neutral_Libertarian_icon: "£ISR_Neutral_Libertarian"
- ISR.Neutral_Autocracy: "£ISR_Neutral_Autocracy United Torah Judiasm"
+ ISR.Neutral_Autocracy: "£ISR_Neutral_Autocracy United Torah Judaism"
  ISR.Neutral_Autocracy_desc: ""
  ISR.Neutral_Autocracy_icon: "£ISR_Neutral_Autocracy"
  ISR.Neutral_Communism: "£ISR_Neutral_Communism Da'am Worker's Party"
