more focus tree work

--- a/localisation/english/MD_focus_EU_USoE_l_english.yml
+++ b/localisation/english/MD_focus_EU_USoE_l_english.yml
@@ -41,6 +41,7 @@
  free_growth_eco_tooltip: "Businesses in §Y[ROOT.GetNameWithFlag]§! will begin to dramatically increase private investment for growth!"
  unlock_eco_decisions_tooltip: "Unlocks decisions related to §YEconomic Instability§! system."
  UOE_unlock_resource_agency_tooltip: "Unlocks §YEuropean Resource Agency§! decision category."
+ UOE_grow_more_small_stuff: "Increase §YState Productivity§! by §G0.5§! for each state below the national productivity average."
 
  #############
  ### Ideas / BoP / Decisions ###
