--- a/localisation/english/MD_focus_EU_USoE_l_english.yml
+++ b/localisation/english/MD_focus_EU_USoE_l_english.yml
@@ -42,6 +42,8 @@
  unlock_eco_decisions_tooltip: "Unlocks decisions related to §YEconomic Instability§! system."
  UOE_unlock_resource_agency_tooltip: "Unlocks §YEuropean Resource Agency§! decision category."
  UOE_grow_more_small_stuff: "Increase §YState Productivity§! by §G0.5§! for each state below the national productivity average."
+ UEO_unlock_construction_agency_tooltip: "Unlocks §YEuropean Construction Agency§! decision category."
+ UOE_euro_trans_effect_tooltip: "Unlocks §YEuropean Transportation Agency§! decision category."
 
  #############
  ### Ideas / BoP / Decisions ###
