--- a/localisation/english/MD_focus_EU_USoE_l_english.yml
+++ b/localisation/english/MD_focus_EU_USoE_l_english.yml
@@ -44,6 +44,7 @@
  UOE_grow_more_small_stuff: "Increase §YState Productivity§! by §G0.5§! for each state below the national productivity average."
  UEO_unlock_construction_agency_tooltip: "Unlocks §YEuropean Construction Agency§! decision category."
  UOE_euro_trans_effect_tooltip: "Unlocks §YEuropean Transportation Agency§! decision category."
+ UOE_mil_ind_complex_tooltip: "Unlocks §YMilitary Industrial Complex§! decision category."
 
  #############
  ### Ideas / BoP / Decisions ###
