--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -62,3 +62,24 @@ l_english:
   HOL_CMP: "Commissariaat Militaire Productie"
   HOL_CMP_desc: "The Commissariaat Militaire Productie (CMP), or Commissariat for Military Production, was a Dutch government body established to oversee and coordinate the production of military equipment and supplies. Its primary role was to ensure that the Netherlands' defense forces were adequately equipped, especially during times of conflict or heightened military preparedness. The CMP was responsible for managing contracts with domestic industries, regulating the production of weapons, ammunition, vehicles, and other military necessities, and ensuring that these were produced to meet the required standards and timelines."
   HOL_Change_CMP_Spirit_TT: "Modify §HCommissariaat Militaire Productie§! by \n"
+  HOL_international_market_income_modifier: "£tax_gain_multiplier_modifier_texticon §YInternational Market Income§! Modifier"
+  HOL_international_market_income_modifier_change: ""
+  HOL_military_factories_productivity: "§YMilitary Factories§! Productivity"
+  HOL_military_factories_productivity_change: ""
+  HOL_dockyard_productivity: "§YDockyards§! Productivity"
+  HOL_dockyard_productivity_change: ""
+  HOL_dockyard_income_tax_modifier: "£corporate_tax_income_multiplier_modifier_texticon §Y$dockyard$§! Tax Revenue Multiplier"
+  HOL_dockyard_income_tax_modifier_change: ""
+  HOL_navy_fuel_consumption_factor: "£fuel_consumption_texticon  Navy Fuel Consumption"
+  HOL_navy_fuel_consumption_factor_change: ""
+  HOL_mil_facs_worker_requirement_modifier: "Military Factories and Dockyards Required Workforce"
+  HOL_mil_facs_worker_requirement_modifier_change: ""
+  HOL_Industrial_capacity_dockyard_factor: "£dockyard_output_texticon  Dockyard Output"
+  HOL_Industrial_capacity_dockyard_factor_change: ""
+  HOL_Positioning: "£ships_contact_texticon  Positioning"
+  HOL_Positioning_change: ""
+  HOL_navy_intel_to_others: "£navy_intel_texticon  Navy intelligence to others"
+  HOL_navy_intel_to_others_change: ""
+  HOL_production_speed_radar_station_factor: "£construction_speed_texticon §Y$radar_station$§! construction speed"
+  HOL_production_speed_radar_station_factor_change: ""
+  
