--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -1,6 +1,6 @@
-﻿# Author(s): TheGeneral
-l_english:
-### Ideas
+﻿l_english:
+  netherlands_focus: "Dutch Focus Tree"
+  ### Ideas
   HOL_NAM1: "Nederlandse Aardolie Maatschappij"
   HOL_NAM1_desc: "The Nederlandse Aardolie Maatschappij (NAM) is a Dutch oil and gas company founded in 1947 as a joint venture between Shell and ExxonMobil. NAM is the largest producer of natural gas in the Netherlands, responsible for the exploration, production, and distribution of natural gas and oil, primarily from the Groningen gas field. The company has played a significant role in the Dutch energy sector for decades."
   HOL_Shell1: "Royal Shell"
@@ -64,22 +64,31 @@ l_english:
   HOL_Change_CMP_Spirit_TT: "Modify §HCommissariaat Militaire Productie§! by \n"
   HOL_international_market_income_modifier: "£tax_gain_multiplier_modifier_texticon §YInternational Market Income§! Modifier"
   HOL_international_market_income_modifier_change: ""
+  HOL_international_market_income_modifier_change_tt:""""
   HOL_military_factories_productivity: "§YMilitary Factories§! Productivity"
   HOL_military_factories_productivity_change: ""
+  OL_military_factories_productivity_change_tt: ""
   HOL_dockyard_productivity: "§YDockyards§! Productivity"
   HOL_dockyard_productivity_change: ""
+  HOL_dockyard_productivity_change_tt: ""
   HOL_dockyard_income_tax_modifier: "£corporate_tax_income_multiplier_modifier_texticon §Y$dockyard$§! Tax Revenue Multiplier"
-  HOL_dockyard_income_tax_modifier_change: ""
+  HOL_dockyard_income_tax_modifier_change_tt: "£corporate_tax_income_multiplier_modifier_texticon §Y$dockyard$§! Tax Revenue Multiplier: [?HOL_dockyard_income_tax_modifier_change|%+] \n "
   HOL_navy_fuel_consumption_factor: "£fuel_consumption_texticon  Navy Fuel Consumption"
   HOL_navy_fuel_consumption_factor_change: ""
+  HOL_navy_fuel_consumption_factor_change_tt: ""
   HOL_mil_facs_worker_requirement_modifier: "Military Factories and Dockyards Required Workforce"
   HOL_mil_facs_worker_requirement_modifier_change: ""
+  HOL_mil_facs_worker_requirement_modifier_change_tt: ""
   HOL_Industrial_capacity_dockyard_factor: "£dockyard_output_texticon  Dockyard Output"
   HOL_Industrial_capacity_dockyard_factor_change: ""
+  HOL_Industrial_capacity_dockyard_factor_change_tt: ""
   HOL_Positioning: "£ships_contact_texticon  Positioning"
   HOL_Positioning_change: ""
+  HOL_Positioning_change_tt: ""
   HOL_navy_intel_to_others: "£navy_intel_texticon  Navy intelligence to others"
   HOL_navy_intel_to_others_change: ""
+  HOL_navy_intel_to_others_change_tt: ""
   HOL_production_speed_radar_station_factor: "£construction_speed_texticon §Y$radar_station$§! construction speed"
   HOL_production_speed_radar_station_factor_change: ""
-  
+  HOL_production_speed_radar_station_factor_change_tt: ""
+
