--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -55,9 +55,8 @@
  HOL_CMP: "Commissariaat Militaire Productie"
  HOL_CMP_desc: "The Commissariaat Militaire Productie (CMP), or Commissariat for Military Production, was a Dutch government body established to oversee and coordinate the production of military equipment and supplies. Its primary role was to ensure that the Netherlands' defense forces were adequately equipped, especially during times of conflict or heightened military preparedness. The CMP was responsible for managing contracts with domestic industries, regulating the production of weapons, ammunition, vehicles, and other military necessities, and ensuring that these were produced to meet the required standards and timelines."
  HOL_Change_CMP_Spirit_TT: "Modify §HCommissariaat Militaire Productie§! by \n"
- HOL_international_market_income_modifier: "£tax_gain_multiplier_modifier_texticon §YInternational Market Income§! Modifier"
- HOL_international_market_income_modifier_change: ""
- HOL_international_market_income_modifier_change_tt: ""
+ HOL_international_market_purchase_modifier: "£tax_gain_multiplier_modifier_texticon §YInternational Market Purchase§! Modifier"
+ HOL_international_market_purchase_modifier_change_tt: "£tax_gain_multiplier_modifier_texticon §YInternational Market Purchase§! Modifier: [?HOL_dockyard_income_tax_modifier_change|%+] \n "
  HOL_military_factories_productivity: "§YMilitary Factories§! Productivity"
  HOL_military_factories_productivity_change: ""
  HOL_military_factories_productivity_change_tt: ""
@@ -65,7 +64,7 @@
  HOL_dockyard_productivity_change: ""
  HOL_dockyard_productivity_change_tt: ""
  HOL_dockyard_income_tax_modifier: "£corporate_tax_income_multiplier_modifier_texticon §Y$dockyard$§! Tax Revenue Multiplier"
- HOL_dockyard_income_tax_modifier_change_tt: "£corporate_tax_income_multiplier_modifier_texticon §Y$dockyard$§! Tax Revenue Multiplier: [?HOL_dockyard_income_tax_modifier_change|%+] \n "
+ HOL_dockyard_income_tax_modifier_change_tt: "£corporate_tax_income_multiplier_modifier_texticon §Y$dockyard$§! Tax Revenue Multiplier: [?HOL_international_market_purchase_modifier_change|%+] \n "
  HOL_navy_fuel_consumption_factor: "£fuel_consumption_texticon  Navy Fuel Consumption"
  HOL_navy_fuel_consumption_factor_change: ""
  HOL_navy_fuel_consumption_factor_change_tt: ""
