--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -3,6 +3,23 @@
  ### Focusses
  HOL_Shell: "Buy Shares from Shell"
  HOL_Shell_desc: "Royal Dutch Shell, a global energy company headquartered in the Netherlands, is a leading player in the country's energy sector. With a diverse portfolio encompassing oil, gas, renewable energy, and low-carbon technologies, Shell is committed to driving the energy transition and delivering sustainable solutions that meet society's evolving needs."
+ #Militray
+ HOL_Commisariaat_Militaire_Productie: "Commisariaat Militaire Productie"
+ HOL_Commisariaat_Militaire_Productie_desc: "The Commissariaat Militaire Productie focuses on coordinating and enhancing military production capabilities across the Netherlands. This initiative aims to streamline procurement processes, foster domestic defense industries, and ensure a steady supply of advanced military equipment."
+ HOL_Commisariaat_Militaire_Productie_tt: "Add §HCommissariaat Militaire Productie§!, which grants ( £tax_gain_multiplier_modifier_texticon §YInternational Market Purchase§! Modifier: [?0.10|%+] , §YMilitary Factories§! Productivity: [?0.05|%+] , §YDockyards§! Productivity: [?0.05|%+] )"
+ HOL_Rijksregiebureau_Maritieme_Industrie: "Rijksregiebureau Martitieme Industrie"
+ HOL_Rijksregiebureau_Maritieme_Industrie_desc: "The establishment of the Rijksregiebureau Maritieme Maakindustrie marks a significant step towards centralizing and coordinating the maritime manufacturing industry in the Netherlands. This agency will streamline efforts to innovate and expand shipbuilding and marine engineering capabilities, ensuring that Dutch maritime industries remain competitive and technologically advanced."
+ HOL_Maritiem_Masterplan: "Maritiem Masterplan"
+ HOL_Maritiem_Masterplan_desc: "Het Maritiem Masterplan outlines a comprehensive strategy for enhancing the Netherlands' maritime sector. This plan includes investments in infrastructure, research and development, and workforce training. By implementing this master plan, the Netherlands aims to secure its position as a global leader in maritime innovation and sustainability."
+ HOL_Werf_van_de_toekomst: "Werf van de Toekomst"
+ HOL_Werf_van_de_toekomst_desc: "De Werf van de Toekomst (The Shipyard of the Future) project aims to revolutionize shipbuilding in the Netherlands. This initiative focuses on integrating advanced manufacturing technologies, such as automation, robotics, and 3D printing, into shipyard operations. The goal is to create more efficient, sustainable, and cost-effective shipbuilding processes."
+ HOL_Smart_Maritime: "Smart Maritime"
+ HOL_Smart_Maritime_desc: "The Smart Maritime initiative leverages digital technologies to enhance the efficiency and performance of the Dutch maritime sector. This focus includes the implementation of smart systems for navigation, logistics, and maintenance, as well as the development of autonomous vessels. By embracing digital transformation, the Netherlands aims to lead the way in smart shipping solutions."
+ HOL_Robotics_Navy: "Robotics Navy"
+ HOL_Robotics_Navy_desc: "The Robotisering Wind op Zee (Robotic Offshore Wind) project focuses on integrating robotics and automation into the offshore wind industry. This initiative aims to improve the installation, maintenance, and operation of wind turbines at sea, making the process safer, more efficient, and more sustainable. By harnessing robotics, the Netherlands can enhance its renewable energy capabilities."
+ HOL_Nuke_Navy: "Nucleaire Voortstuwing van Schepen"
+ HOL_Nuke_Navy_desc: "The Nucleaire Voortstuwing van Schepen (Nuclear Propulsion for Ships) initiative explores the development and implementation of nuclear-powered propulsion systems for Dutch naval and commercial vessels. This focus aims to provide sustainable and long-range propulsion solutions, reducing dependency on fossil fuels and enhancing the operational capabilities of the Dutch fleet."
+ HOL_Nuke_Navy_tt: ""
  ### Ideas
  HOL_NAM1: "Nederlandse Aardolie Maatschappij"
  HOL_NAM1_desc: "The Nederlandse Aardolie Maatschappij (NAM) is a Dutch oil and gas company founded in 1947 as a joint venture between Shell and ExxonMobil. NAM is the largest producer of natural gas in the Netherlands, responsible for the exploration, production, and distribution of natural gas and oil, primarily from the Groningen gas field. The company has played a significant role in the Dutch energy sector for decades."
@@ -44,6 +61,8 @@
  HOL_Marine1_desc: "The Koninklijke Marine, or Royal Netherlands Navy, is the naval branch of the Dutch Armed Forces and one of the oldest navies in the world, with origins dating back to the 15th century. It plays a crucial role in the defense of the Netherlands, both at home and abroad, and is also involved in various international missions, including NATO operations, peacekeeping, and humanitarian efforts. The Royal Netherlands Navy is known for its advanced and versatile fleet, which includes frigates, submarines, patrol vessels, and amphibious ships. The navy also operates a range of aircraft and helicopters, primarily for maritime patrol, transport, and search and rescue missions. The Korps Mariniers, the Netherlands' elite marine corps, is an integral part of the navy, specializing in amphibious operations and rapid response missions."
  HOL_Submarine_Modernization_Idea: "Submarine Modernization"
  HOL_Submarine_Modernization_Idea_desc: "Submarine modernization is a key initiative for the Royal Netherlands Navy, focusing on upgrading the aging Walrus-class submarines. These upgrades include advanced sonar systems, improved stealth features, and enhanced weaponry, ensuring the submarines remain effective in modern naval operations. The modernization aims to extend the service life of the submarines and maintain their strategic relevance in global maritime security efforts."
+ HOL_CMP_idea: "Commissariaat Militaire Productie"
+ HOL_CMP_idea_desc: "The Commissariaat Militaire Productie (CMP), or Commissariat for Military Production, was a Dutch government body established to oversee and coordinate the production of military equipment and supplies. Its primary role was to ensure that the Netherlands' defense forces were adequately equipped, especially during times of conflict or heightened military preparedness. The CMP was responsible for managing contracts with domestic industries, regulating the production of weapons, ammunition, vehicles, and other military necessities, and ensuring that these were produced to meet the required standards and timelines."
 
  ### Modifiers
  HOL_Groningen_Herstelt1: "Herstel Groningen"
@@ -58,29 +77,21 @@
  HOL_international_market_purchase_modifier: "£tax_gain_multiplier_modifier_texticon §YInternational Market Purchase§! Modifier"
  HOL_international_market_purchase_modifier_change_tt: "£tax_gain_multiplier_modifier_texticon §YInternational Market Purchase§! Modifier: [?HOL_dockyard_income_tax_modifier_change|%+] \n "
  HOL_military_factories_productivity: "§YMilitary Factories§! Productivity"
- HOL_military_factories_productivity_change: ""
- HOL_military_factories_productivity_change_tt: ""
+ HOL_military_factories_productivity_change_tt: "§YMilitary Factories§! Productivity Multiplier: [?HOL_military_factories_productivity_effect_change|%+] \n "
  HOL_dockyard_productivity: "§YDockyards§! Productivity"
- HOL_dockyard_productivity_change: ""
- HOL_dockyard_productivity_change_tt: ""
+ HOL_dockyard_productivity_change_tt: "§YDockyards§! Productivity Multiplier: [?HOL_dockyard_productivity_change|%+] \n "
  HOL_dockyard_income_tax_modifier: "£corporate_tax_income_multiplier_modifier_texticon §Y$dockyard$§! Tax Revenue Multiplier"
- HOL_dockyard_income_tax_modifier_change_tt: "£corporate_tax_income_multiplier_modifier_texticon §Y$dockyard$§! Tax Revenue Multiplier: [?HOL_international_market_purchase_modifier_change|%+] \n "
+ HOL_dockyard_income_tax_modifier_change_tt: "£corporate_tax_income_multiplier_modifier_texticon §Y$dockyard$§! Tax Revenue Multiplier: [?HOL_dockyard_income_tax_modifier_change|%+] \n "
  HOL_navy_fuel_consumption_factor: "£fuel_consumption_texticon  Navy Fuel Consumption"
- HOL_navy_fuel_consumption_factor_change: ""
- HOL_navy_fuel_consumption_factor_change_tt: ""
+ HOL_navy_fuel_consumption_factor_change_tt: "£fuel_consumption_texticon  Navy Fuel Consumption: [?HOL_navy_fuel_consumption_factor_change|%-] \n "
  HOL_mil_facs_worker_requirement_modifier: "Military Factories and Dockyards Required Workforce"
- HOL_mil_facs_worker_requirement_modifier_change: ""
- HOL_mil_facs_worker_requirement_modifier_change_tt: ""
+ HOL_mil_facs_worker_requirement_modifier_change_tt: "Military Factories and Dockyards Required Workforce: [?HOL_mil_facs_worker_requirement_modifier_change|%-] \n  "
  HOL_Industrial_capacity_dockyard_factor: "£dockyard_output_texticon  Dockyard Output"
- HOL_Industrial_capacity_dockyard_factor_change: ""
- HOL_Industrial_capacity_dockyard_factor_change_tt: ""
+ HOL_Industrial_capacity_dockyard_factor_change_tt: "£dockyard_output_texticon  Dockyard Output: [?HOL_Industrial_capacity_dockyard_factor_change|%+] \n "
  HOL_Positioning: "£ships_contact_texticon  Positioning"
- HOL_Positioning_change: ""
- HOL_Positioning_change_tt: ""
+ HOL_Positioning_change_tt: "£ships_contact_texticon  Positioning: [?HOL_Positioning_change|%+] \n "
  HOL_navy_intel_to_others: "£navy_intel_texticon  Navy intelligence to others"
- HOL_navy_intel_to_others_change: ""
- HOL_navy_intel_to_others_change_tt: ""
+ HOL_navy_intel_to_others_change_tt: "£navy_intel_texticon  Navy intelligence to others: [?HOL_navy_intel_to_others_change|%+] \n "
  HOL_production_speed_radar_station_factor: "£construction_speed_texticon §Y$radar_station$§! construction speed"
- HOL_production_speed_radar_station_factor_change: ""
- HOL_production_speed_radar_station_factor_change_tt: ""
+ HOL_production_speed_radar_station_factor_change_tt: "£construction_speed_texticon §Y$radar_station$§! construction speed: [?HOL_production_speed_radar_station_factor_change|%+] \n "
 
