Additional Internal Faction effects for LAR Upgrades and Subparty

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -9,6 +9,9 @@ v1.10.5
 
  Balance:
   - Added additional internal factions effects to a variety of different trees
+  - Military spending now raises the minimum of "The Military" opinion
+  - All Intelligence Agencies upgrades will now give the "Intelligence Community" opinion
+  - Ideological powers decisions should now give opinion relating to the specific focus group that they impact
 
  Bugfix:
   - Fixed the missing model errors from TOTA (added blank asset files)
