--- a/localisation/english/MD_internal_factions_l_english.yml
+++ b/localisation/english/MD_internal_factions_l_english.yml
@@ -476,6 +476,14 @@
  has_economic_faction_TT: "Economic internal faction"
  has_religious_faction_TT: "Religious internal faction"
  the_military_minus_5_tt: "§YThe Military§! Opinion §R-5§!\n"
+ the_military_add_5_tt: "§YThe Military§! Opinion §G+5§!\n"
+ the_military_add_10_tt: "§YThe Military§! Opinion §G+10§!\n"
+ the_military_add_15_tt: "§YThe Military§! Opinion §G+15§!\n"
+ the_military_add_20_tt: "§YThe Military§! Opinion §G+20§!\n"
+ the_military_add_25_tt: "§YThe Military§! Opinion §G+25§!\n"
+ the_military_add_30_tt: "§YThe Military§! Opinion §G+30§!\n"
+ the_military_add_35_tt: "§YThe Military§! Opinion §G+35§!\n"
+ the_military_add_40_tt: "§YThe Military§! Opinion §G+40§!\n"
  labour_unions_minus_15_tt: "§YLabour Unions§! Opinion §R-15§!\n"
  labour_unions_plus_10_tt: "§YLabour Unions§! Opinion §G+15§!\n"
  reduce_taxes_farmer_mission_tt: "Our §YCorporate Tax Rate§! is Below [?reduction_target_farmers_tax_rate|Y0]% (Current: [?corporate_tax_rate|0Y]%)\n"
