Poland new mios

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -24,6 +24,7 @@ v1.10.5
   - Added additional decisions to a variety of different internal factions
   - Added some new events to Internal Factions for the religious factions
   - Added the ability to "Accept All Reactor Grade Fuel Purchases"
+  - Added 2 new air force MIOs for Poland
 
  Database:
   - ADJUSTED PRODUCTIVITY: MIC, KOS, KAR, KAC, SHN, WAA, ABK, JUB, CHE
